<resources>
    <string name="app_name">fda</string>
    <string name="calculate">Calculate</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="contact_our_nutritionist">Do you still have questions? Contact our nutritionist:</string>

    <string name="e_mail">E-mail</string>
    <string name="error">Error</string>
    <string name="subject">Subject</string>
    <string name="write_your_message">Write your message</string>
    <string name="recipient_e_mail">Recipient e-mail</string>
    <string name="send">Send</string>
    <string name="sample">SAMPLE</string>
    <string name="_00_00">00.00</string>
</resources>